--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   gsheets: ^0.2.5
   custom_switch: ^0.0.1
+  shared_preferences: ^0.5.10
 
 
   # The following adds the Cupertino Icons font to your application.
